tests/paczka1/small_fuzzy/10289260.err
Error in line 2: ncgWWhdMeHu A473 22,3
Error in line 6: MYUk6Yc S772 96,7
